

*lh-sources-3.8.7 (13 Apr 2013)

  13 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.7.ebuild:
  Bump to latest genpatches

*lh-sources-3.8.6 (06 Apr 2013)

  06 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.6.ebuild:
  Bump to latest genpatches release

*lh-sources-3.8.5-r1 (02 Apr 2013)

  02 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.5-r1.ebuild:
  Bump to new aufs3 release

*lh-sources-3.8.5 (30 Mar 2013)

  30 Mar 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.5.ebuild:
  Bump to genpatches 3.8-8 and latest aufs

*lh-sources-3.8.4 (21 Mar 2013)

  21 Mar 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.8.3-r1.ebuild,
  +lh-sources-3.8.4.ebuild:
  Version BUmp

*lh-sources-3.8.3-r1 (18 Mar 2013)

  18 Mar 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.8.2-r2.ebuild,
  -lh-sources-3.8.2-r3.ebuild, -lh-sources-3.8.3.ebuild,
  +lh-sources-3.8.3-r1.ebuild:
  Drop old; Revert memcg patches that prevent OOM with too many dirty pages
  which caused ZFS to flush dirty pages to deadlock, see bug #462066; in 3.6,
  3.7 and 3.8. Backported fixes from 3.8 to 3.7 that affect some of our Gentoo
  users.

*lh-sources-3.8.3 (16 Mar 2013)

  16 Mar 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.3.ebuild:
  Version Bump

*lh-sources-3.8.2-r3 (15 Mar 2013)

  15 Mar 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.2-r3.ebuild:
  Version Bump

*lh-sources-3.8.2-r2 (10 Mar 2013)

  10 Mar 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.8.2-r1.ebuild,
  +lh-sources-3.8.2-r2.ebuild:
  Don't fiddle with in kernel headers

*lh-sources-3.8.2-r1 (07 Mar 2013)

  07 Mar 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.8.2.ebuild,
  +lh-sources-3.8.2-r1.ebuild:
  Bump to new aufs release

*lh-sources-3.8.2 (04 Mar 2013)

  04 Mar 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.8.1.ebuild,
  +lh-sources-3.8.2.ebuild:
  Version Bump; cleaned old

*lh-sources-3.8.1 (03 Mar 2013)
