@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX lh-sources-3.6-armv6.patch 2482 SHA256 50ce1fc672656fa26fa4fa35694a1007049f682400d14724c7077566df740491 SHA512 81a57f74db5d7776e6632dc9b7ac5f52c75b842a218efa0a5c1ea2480186ddc7d579d896ed5d1793a3f6a88b746287d0dad1d0ee827405d503bdb4c271dda9c4 WHIRLPOOL 8d383031a391c7df9b38e3db4b281f5e234a44d915d61b8cd19b1fbb2130ba18967c57e62a257f84d1fdf8ea00ea41e885f24ed00bf328a8e4647f68acd70ff0
 AUX lh-sources-3.7-armv6.patch 2518 SHA256 75dbd5b6f9178baf47e2d3a2e8211bccfda83feb8217606612cc5a2c85bc065b SHA512 e3183c94bfcadefb447aaeb07a7c9709e1141b1acba301e34159bbef43817e0cf298209a6a5a787a01b7581eb937933d5ee70eb55dbf9267f25583adaad8b448 WHIRLPOOL 04998e4b27542478754ffb835c37b8cab6478a7b05d4f7f303af291ea4fa774bea7f29923e06416eb23b809c37421d1d923a09238265e38c3bf17f731ec9aa35
 AUX lh-sources-3.8-armv6.patch 2518 SHA256 75dbd5b6f9178baf47e2d3a2e8211bccfda83feb8217606612cc5a2c85bc065b SHA512 e3183c94bfcadefb447aaeb07a7c9709e1141b1acba301e34159bbef43817e0cf298209a6a5a787a01b7581eb937933d5ee70eb55dbf9267f25583adaad8b448 WHIRLPOOL 04998e4b27542478754ffb835c37b8cab6478a7b05d4f7f303af291ea4fa774bea7f29923e06416eb23b809c37421d1d923a09238265e38c3bf17f731ec9aa35
@@ -7,6 +10,7 @@ DIST README-3.8.4.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4ca
 DIST README-3.8.5.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.8.6.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.8.7.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
+DIST README-3.8.8.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST aufs-sources-3.8_p20130318.tar.xz 143300 SHA256 1573e49b0055ceb78d862ee656b25f10469c2219897a2de6689850289e723e80 SHA512 a63f43dc49ea9ae2092171590041bd052ace8755b7b8fa40c825a9478a5b9ad01158205c2eacb81bb2281a8973ff5d44adfd2874bf18b38d19f13120d8a266ad WHIRLPOOL bb540029d2541f9c0215350073ec7e307297ce9a90493e6bbeb106e7eb61e05df35334bd640eb5d34c935daa277ac84145a537e76d1aa3fb8eba2b916d5a461e
 DIST aufs-sources-3.8_p20130325.tar.xz 143352 SHA256 b278d941bcf3c2555ff15158982add3e8dd2216e575cae11bcb56b6e409c2aec SHA512 326cad5e90c5e32e603519c8a555fd08751cdcf67625ed419c1059e1cd967ae41461954b6433c05d5c0c0c83e206093b7f41fee05483bc013dd3158d418bc8cc WHIRLPOOL 471f7fc551e28cd44f9f3a1913426b0f6c7d383b7ec49faba1852fc23cc01aa94a92aacb604bb9d8a28bfc37890370cbbd013ba7a3755000fa3748b4cddb63e2
 DIST aufs-sources-3.8_p20130401.tar.xz 143368 SHA256 3ae9001450a44ae42eebfbbf542ebe977ae2c65f466eb2374bf203241829159d SHA512 46b8271a6042a13c76ee97f692a855c796545c89e2e41abb05288c605f965ee8bb2fbc2496e4e317ebedbf50623cddf9eb1596ffa53c1405db2a939bbbb072cd WHIRLPOOL ab833ea22d7fd00ca43c0332d7c528c1eba0d0fa3efbf3ba0e41fe72233627b3717a2ec1bc9d92629fb8060673afab14e894e6acd1355161d47d9736fd7b9389
@@ -14,6 +18,8 @@ DIST deblob-3.8 113867 SHA256 883e8f003cabd9168659b4a6c2549bf22f64b8dc7ca9ff1063
 DIST deblob-check-3.8 539625 SHA256 df1f7ebc09f93ec51c0d3755b5454adcdd271e428573014d13f58638760863a2 SHA512 1c27b2df8aedd93da153d8dade37384e59862dac2eab948802744fb1c5cdc7d141cb2d971bbc448e723f15c14f1646a1cc695f20e64150b26dc26746601d1d17 WHIRLPOOL a1354cfcad7d40e8e811882f2715a71f36bb18c99c6c5277b18aef7f738c41bbf5c7099735b6de4a37b22868dbf96a5405d0b21c16a5709d70a1d0b082a57594
 DIST genpatches-3.8-10.base.tar.xz 223324 SHA256 277635e5643a68ef960b199f89c96676f76822f228232e1d1303bd4e26604a3e SHA512 98358376ae9acdb800df1c5b30888b6fee0026db3b3a113df159ab2eb42762479af485d7e138ab867b6baa4b33ab0c0f3a109fe59e44d7d24d0b79a15a2d6ce6 WHIRLPOOL e900ae75141d09f5b5235a55de9f199f3765549825ed47862a0bae98c622939bfef17ddc41a5d97679c5744f055013a18c7f581cfaabff44a57b8ad3b9393d5b
 DIST genpatches-3.8-10.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
+DIST genpatches-3.8-11.base.tar.xz 232756 SHA256 8176334291bf7d9464339a4cc74cd8b153317ec2491d63a7532a42e259d5c6e5 SHA512 c9c9efd9f891f138d7306e419a04e0a4973537ec13c138d59a89470bc0b8dfb08971da411bf0ebda80bd94337f1989ed892865e0c709c82a35482247341a5b19 WHIRLPOOL a3a646d7a898cb77fcddd26d3bfe3c035983c777976237951a745c7331b82f8443e50f91e7a0e2b2d354d7d3506971432236ab8db31ac3f41bd4555778b645b1
+DIST genpatches-3.8-11.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
 DIST genpatches-3.8-7.base.tar.xz 141664 SHA256 5c6e0eaa2f01311c926780b59553deb36ce0eaf1832a8725045f1c9681bab077 SHA512 05e93edf8220f7159dbb807bc93c12c4c778cac660d6fb54ad41e5bcf7474d2daf7ac63f7d76bb81740a717188b8551018d7fb2227f8d91e66038a9d062c4798 WHIRLPOOL ce71cebd7b56abba67843feb389ee172b3d154d863c0b8590de30ed55b56d9d848310c7b2e2ff3eaef08d65e0903429476a91049a5873d7ceee44fbe89503474
 DIST genpatches-3.8-7.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
 DIST genpatches-3.8-8.base.tar.xz 169848 SHA256 6155e2165bada1247947095db09e37c583be690309125c574e3e3e1013988e78 SHA512 58550ae264e66ccfe50c285f12c858df50b25726e6e45942be10a06cc94443259b14109f6f54bffb6947be05db27696687375593d6765499aacd6c2e290dd95f WHIRLPOOL 2977c1b04ba91dad038bd6cf4b974f4e671d23c2180b9091fe0e12a1f8b15e55493c123fc42bb8f0ba591f47cb33a23746ca77889ced2fc7e94ea707564b0dd3
@@ -27,5 +33,13 @@ EBUILD lh-sources-3.8.5-r1.ebuild 3435 SHA256 00e4b765b18b1909e0cf767b72622ff101
 EBUILD lh-sources-3.8.5.ebuild 3454 SHA256 c94b11f65c3ff4aa6ad554d8a21fe055151945e1952ae18f5244a43d80bb3c93 SHA512 ec2c879e53536838af2ddbc4fe1a94f6e1f734e6291f7bf37e80324e8fac12fd16d3d1c2e484fe3b637fe41167556434e75113b0da3a38ae9fc94857ebb74850 WHIRLPOOL 5ce7e30b157ac460cf9e6a9e848677f6a9d4845c2cd5a02cd4693b7b9e4cfc3c0b46c48f30007f1ea11b4c96f88a6661422ba62626afaad3ef330760a79f2451
 EBUILD lh-sources-3.8.6.ebuild 3435 SHA256 78e519c4fcf9cc0c5a828515e17cd6ff6967d4be6356e3459a8fc02ad88436b0 SHA512 2e409be7b8a7f747bdd181216b7abbcacdb66d5f37d8e8ee6ec4394bdf30007bf7c021262176d2021302c64e9e3026273e2119ab3fc6387d0c281ef57408b3b4 WHIRLPOOL 6106dd4521a1d5b41527cb573ac3ff77390c5bfc246278db9a1993129660fc9a9aca0d33d90a182e16ba3795490dbef179733a3771bf0c46a28c6ae7dcaae5dd
 EBUILD lh-sources-3.8.7.ebuild 3436 SHA256 8062fa3712fd3dcceb99e3ef47f584a57459a4a787e08d0ccb95ebc47b307098 SHA512 c9e7a3eb77e522fdbdf2ba48695c3ca8e9de5a9867d8793d440a0e4ea27018566a4e077730a2ce79cf2ded557255408da6c45ce9c5638d3fae1a0856d2cb2d99 WHIRLPOOL 67da45f7556b052a8185126f5eba27ef19f5cc96ea8a010abfd05f40c00a62c888569cd50a5d25c349c83eb0bd8e47f56b39370c61c9f3b92eaeb5dba4c1a2e1
-MISC ChangeLog 6799 SHA256 b7d7b8938a3977034019dfb4466bc2b06047011bc0713d4d18808d057bdf493e SHA512 e1c2026f58ac327bacf7380a8728892a98ad19ba028b3ac0c9149a2a3105e0e21eaad4386e93c8f3af7c983caade5e870c04584708c092013d18f0110f97cc95 WHIRLPOOL 296e5722e7989d92aa1c46ac74395f5cc915622039eb6483ebee67653517b2bd4a7a25d236483f9431505e2e7e9be1be232dd7027f3452c4711be1b0a2b1a420
+EBUILD lh-sources-3.8.8.ebuild 3436 SHA256 8a35a4453727037ceb498fb48328b2787396115fcecf71ff4ee5cb116ba94bbd SHA512 5a1ce3f1634771cec3fe65d98371fc720300d82269705005a8d16531c59205389c9b2f59488cc9c6e89641dfdb624d84fa4adba95767118f06b059834b908193 WHIRLPOOL 0afb085b59ef16830210b0445c16d146af404e6e0c0b6095dbad2c7587a407a3647f7a00cd68e448a252bfc83ab8c1f07e494d1ff0b349333c011dadede2a846
+MISC ChangeLog 6934 SHA256 7ea7a7dcdc766458778aec804c552ec942c6a72299ee23279154707bb7b28f4d SHA512 970e51f0f9fff27f19799940d9b2008d7dd738694c5da9119e1ac39f0ec1ef855ef192ebaf0342f2b6e51f6822f61a066af99a9657586267cdb47c56380fc9b4 WHIRLPOOL 1ca0ad408cbabad2759f8c9c53dbc0e8747264ebbdf89253a2ad9c4be8a5ac49d0e84bfd5fa39aa4075fc6d497f51b449b21b2df53d7bb1da901598d441bc94b
 MISC metadata.xml 621 SHA256 0e6f9ec38a6a9e192a6ab3cf83a409914c821b4dde2c1a15c28d558b6beef8bb SHA512 56744236081b425f4726c26c3b1a8e23297f1b7e4656ff4edbc2e6608a1150fb2e84ed1b58c5ab1318aebdab072392ef9d00160e2c766cc540bb6746bbe24bb3 WHIRLPOOL ed73cba1dee5abce3979c8f41094660b6eb046ef8c4d5820c060b863f54e6fb56a344c49630d8d03d400cba2dc2f4e5a35cd48c4ebdc4e9558511f2e9c9333bb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREKAAYFAlFviakACgkQgAnW8HDreRb9igCglCQB5+8C6AXq4rJyUk+Pz7i+
+cMEAn3qpXviLQAMqIVkmDYsF+vJFC1JV
+=KuHz
+-----END PGP SIGNATURE-----
